Freedom Sanbox Ant Deploy/src/objects/Asset__c.object
<CustomObject>
    <fields>
        <fullName>Account_Description__c</fullName>
        <label>Account Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Changed label from Account Number to Description</description>
        <label>Description</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>EPF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gratuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superannuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Saving Certificate (NSC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kisan Vikas Patra (KVP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indra Vikas Patra / Others (IVP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Income Plan (MIP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Office Recurring Deposit (RD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Office Time Deposit (FD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Provident Fund (PPF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Citizens Savings Scheme (SCSS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current A/c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings A/c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate of Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring Deposits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash in hand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others…</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accumulated_Value__c</fullName>
        <label>Accumulated Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Year__c</fullName>
        <label>Acquisition Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>To be grown till maturity and continue saving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be grown till maturity but stop saving more</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquidate (Align to goal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquidate (sell)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold (Align to goal)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allocated_Amount__c</fullName>
        <label>Allocated Amount</label>
        <summarizedField>GoalAssetAssociation__c.Allocation__c</summarizedField>
        <summaryForeignKey>GoalAssetAssociation__c.Asset__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_Contribution__c</fullName>
        <label>Annual Contribution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_Sub_Types__c</fullName>
        <label>Asset Sub Types</label>
        <picklist>
            <controllingField>Asset_Types__c</controllingField>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sole Proprietorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewelry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current A/c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings A/c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash in hand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gratuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superannuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Saving Certificate (NSC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kisan Vikas Patra (KVP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indra Vikas Patra / Others (IVP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Income Plan (MIP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Office Recurring Deposit (RD)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Types__c</fullName>
        <label>Asset Type</label>
        <picklist>
            <picklistValues>
                <fullName>EPF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gratuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superannuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Saving Certificate (NSC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kisan Vikas Patra (KVP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indra Vikas Patra / Others (IVP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Income Plan (MIP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Office Recurring Deposit (RD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Office Time Deposit (FD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Provident Fund (PPF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Citizens Savings Scheme (SCSS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current A/c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings A/c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash in hand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sole Proprietorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewelry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_value__c</fullName>
        <formula>CASE(RecordTypeId , 
           &apos;01220000000HYzZ&apos; , Accumulated_Value__c,
           &apos;01220000000HYzX&apos; , Accumulated_Value__c,
           &apos;01220000000HYzV&apos;, Current_Balance__c,
           &apos;01220000000HYzU&apos; , Current_Value__c ,
           &apos;01220000000HYzT&apos;, Current_Value__c ,
           &apos;01220000000HYzY&apos; , Current_Value__c ,
           &apos;01220000000HYzW&apos;, Current_Value__c ,
            0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset_value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalculatedInterestRate__c</fullName>
        <formula>CASE(RecordTypeId , 
           &apos;01220000000HYzZ&apos; , CASE( Account_Type__c ,
											&apos;EPF&apos; , 8.5,
											&apos;Gratuity&apos; , 6 ,
											&apos;Superannuation&apos; , 6 ,
											0) ,
           &apos;01220000000HYzX&apos; , CASE( Account_Type__c ,
											&apos;National Saving Certificate (NSC)&apos;, 7.5 ,
											&apos;Public Provident Fund (PPF)&apos;, 8 ,
											&apos;Kisan Vikas Patra (KVP)&apos;, 7.5,
											7.5),
           &apos;01220000000HYzV&apos;,  NULLVALUE(Interest_Rate__c,  5 ),
           &apos;01220000000HYzU&apos; , 0 , 
           &apos;01220000000HYzT&apos;, 0 , 
           &apos;01220000000HYzY&apos; , 0 , 
           &apos;01220000000HYzW&apos;, 0 , 
            0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DefaultInterestRate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmergencyFundAction__c</fullName>
        <label>EmergencyFundAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Year__c</fullName>
        <label>End Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expected_Growth_Rate__c</fullName>
        <label>Expected Growth Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Year_of_Sale__c</fullName>
        <label>Expected Year of Sale</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Portal__c</fullName>
        <label>From Portal</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inserted_From_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inserted From Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IsSynched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSynched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Include_In_HLV_Asset__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To include only checked assets in HLV calculations</description>
        <label>Include In HLV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Asset__c</fullName>
        <formula>CASE(RecordTypeId , 
           &apos;01220000000HYzZ&apos; , Accumulated_Value__c,
           &apos;01220000000HYzX&apos; , Accumulated_Value__c,
           &apos;01220000000HYzV&apos;, Current_Balance__c,
           &apos;01220000000HYzU&apos; , Current_Value__c ,
           &apos;01220000000HYzT&apos;, Current_Value__c ,
           &apos;01220000000HYzY&apos; , Current_Value__c ,
           &apos;01220000000HYzW&apos;, Current_Value__c ,
            0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Asset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Portal_Id__c</fullName>
        <label>Portal Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Parent_Entity__c</fullName>
        <label>Portal Parent Entity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemoveCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RemoveCheckbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Year__c</fullName>
        <label>Start Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synched_Date_Time__c</fullName>
        <label>Synched Date Time</label>
        <type>DateTime</type>
    </fields>
    <label>Asset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <recordTypes>
        <fullName>Business_Assets</fullName>
        <active>true</active>
        <label>Business Assets</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cash_and_Cash_Equivalents</fullName>
        <active>true</active>
        <label>Cash and Cash Equivalents</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deposits_with_Bank</fullName>
        <active>true</active>
        <label>Deposits With Bank</label>
    </recordTypes>
    <recordTypes>
        <fullName>Personal_Assets</fullName>
        <active>true</active>
        <label>Personal Assets</label>
    </recordTypes>
    <recordTypes>
        <fullName>Post_Office_Saving_Schemes</fullName>
        <active>true</active>
        <label>Govt. Saving Schemes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Real_Estate_Assets</fullName>
        <active>true</active>
        <label>Real Estate Assets</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retirement_Accounts</fullName>
        <active>true</active>
        <label>Retirement Accounts</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>